--- a/styles/home.scss
+++ b/styles/home.scss
@@ -13,12 +13,10 @@
 
   .counter-wrap {
     background: none;
-    min-width: 350px;
-    min-height: 150px;
   }
 
   .card-body {
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.5);;
   }
 
   .card-header {
@@ -27,6 +25,5 @@
 
   .counter-number {
     font-size: xx-large;
-    font-weight: 700;
   }
 }
